Run translation analysis as background jobs
